# chai-engine

./: .gitignore  CLAUDE.md  README.md  env.template  experiment.py  experiment2.py  experiment3.py  experiment4.py  experiment5.py  experiment_integers.py  experiment_mlx_vlm.py  experiment_sglang.py  experiment_sglang_text.py  experiment_vllm.py  experiment_vllm_text.py  pyproject.toml  requirements.txt
chai/: __init__.py  annotator.py  base.py  cache.py  classifier.py  conditions.py  core.py  data_utils.py  describer.py  embeddings.py  evaluator.py  extractor.py  fanout.py  gate.py  image_operations.py  iterator.py  provider.py  reducer.py  result.py  schema.py  segmenter.py  storage.py  transcriber.py  translator.py  utils.py  workflow.py
chai/ai/: __init__.py  ai_utils.py  gemini.py  lm_studio.py  mlx_vlm.py  ollama.py  openai.py  sglang.py  transformers.py  vllm.py
chai/data/: library.json  prompts.json
docs/: README.md  findings.md  mlx_vlm.md  sglang.md  vllm.md
tests/: test_conditions.py  test_embeddings.py  test_gates.py  test_rag_eval_schema.py  test_reducers.py  test_resilience.py  test_storage.py  test_workflow.py
